--- a/frontend/ODIRA/src/app/app.css
+++ b/frontend/ODIRA/src/app/app.css
@@ -1,11 +1,5 @@
 @import 'tailwindcss';
 
-.full-contain{
-    @apply w-full bg-gray-700;
-}
-.nav-menu{
-   @apply container mx-auto flex flex-row lg:flex-row justify-between items-center border-2 border-amber-700; 
-}
 .odira-container{
-    @apply w-full text-slate-200 mx-auto p-4;
+    @apply max-w-full bg-slate-800 text-slate-100 ;
 }
