--- a/frontend/ODIRA/src/app/odira/odira.html
+++ b/frontend/ODIRA/src/app/odira/odira.html
@@ -1,24 +1,34 @@
-<div class="container">
+<div class="container max-w-full">
   <!-- Main menu -->
   <div class="nav-menu">
-    <p>Item 1</p>
-    <p>Item 2</p>
+    <div class="heading-items">
+      <h1 class="heading">ODIRA</h1>
+      <h1 class="heading">ABOUT</h1>
+    </div>
   </div>
-  <!-- Left Column -->
-  <div class="webcam-component">
-    <p>webcam</p>
-  </div>
-  <div class="result-component">
-    <p>result</p>
-  </div>
-  <!-- Right Column -->
-  <div class="settings-component">
-    <p>settings</p>
-  </div>
-  <div class="upload-component">
-    <p>upload</p>
-  </div>
-  <div class="process-image-component">
-    <p>process image</p>
+
+  <!-- ODIRA Content -->
+  <div class="odira-content">
+    <!-- Left Column -->
+    <div class="left-column">
+      <div class="webcam-component">
+        <app-webcam-window />
+      </div>
+      <div class="result-component">
+        <p>result</p>
+      </div>
+    </div>
+    <!-- Right Column -->
+    <div class="right-column">
+      <div class="settings-component">
+        <p>settings</p>
+      </div>
+      <div class="upload-component">
+        <p>upload</p>
+      </div>
+      <div class="process-image-component">
+        <p>process image</p>
+      </div>
+    </div>
   </div>
 </div>
