--- a/frontend/ODIRA/src/app/odira/odira.html
+++ b/frontend/ODIRA/src/app/odira/odira.html
@@ -21,7 +21,7 @@
     <!-- Right Column -->
     <div class="right-column">
       <div class="settings-component">
-        <p>settings</p>
+        <app-settings />
       </div>
       <div class="upload-component">
         <p>upload</p>
