--- a/frontend/ODIRA/src/app/webcam-window/webcam-window.html
+++ b/frontend/ODIRA/src/app/webcam-window/webcam-window.html
@@ -1,4 +1,4 @@
-<div class="container border-2 border-pink-400 webcam-grid justify-items-center">
+<div class="w-full border-2 border-pink-400 webcam-grid justify-items-center">
   <div>
     <h1 class="heading">Webcam</h1>
   </div>
