--- a/frontend/ODIRA/src/app/odira/odira.html
+++ b/frontend/ODIRA/src/app/odira/odira.html
@@ -23,11 +23,11 @@
       <div class="settings-component">
         <app-settings />
       </div>
-      <div class="upload-component">
-        <p>upload</p>
+      <div class="upload-image-component">
+        <app-upload-image />
       </div>
-      <div class="process-image-component">
-        <p>process image</p>
+      <div class="image-preview-component">
+        <app-image-preview />
       </div>
     </div>
   </div>
