--- a/frontend/ODIRA/src/app/settings/settings.html
+++ b/frontend/ODIRA/src/app/settings/settings.html
@@ -25,8 +25,8 @@
           </div>
           <span class="tooltip-text arrow"
             ><p>
-              Slide to lower values to detect objects with low certainty. Slide to higher values to
-              detect objects with higher certainty.
+              Slide to lower values, Detect objects with low certainty. Slide to higher values,
+              Detect objects with higher certainty.
             </p></span
           >
         </div>
@@ -52,9 +52,8 @@
           </div>
           <span class="tooltip-text arrow"
             ><p>
-              Slide to lower values to reduce redundant detections (multiple boxes for the same
-              object). Slide to a higher values to allow detection of distinct objects in
-              overlapping boundaries.
+              Slide to lower values, Fewer overlapping boxes are shown. (Stricter Filtering). Slide
+              to higher values, More overlapping boxes are shown. (Looser Filtering).
             </p></span
           >
         </div>
