added image state service and logic to show image in image preview component

--- a/frontend/ODIRA/src/app/image-preview/image-preview.html
+++ b/frontend/ODIRA/src/app/image-preview/image-preview.html
@@ -8,7 +8,13 @@
     </div>
   </div>
 
+  @if(webcamService.previewImage()){
+  <div class="border-4 border-purple-700 h-full">
+    <img [src]="webcamService.previewImage()" class="img-size" alt="" />
+  </div>
+  } @else{
   <div class="border-4 border-purple-700 h-full">
     <img src="images/camera-off.jpg" class="img-size" alt="" />
   </div>
+  }
 </div>
