Added Processing Return Logic and Initialized Result Component

--- a/frontend/ODIRA/src/app/image-preview/image-preview.html
+++ b/frontend/ODIRA/src/app/image-preview/image-preview.html
@@ -3,7 +3,9 @@
     <h1 class="heading">Process Image</h1>
     <div class="border-2 border-green-400 grow grid grid-cols-3 mt-4">
       <p>CheckMark</p>
-      <p>Process Button</p>
+      <div class="container">
+        <button class="process-img-btn">Process Button</button>
+      </div>
       <p>Image Preview Button</p>
     </div>
   </div>
