--- a/frontend/ODIRA/src/app/odira/odira.html
+++ b/frontend/ODIRA/src/app/odira/odira.html
@@ -15,7 +15,7 @@
         <app-webcam-window />
       </div>
       <div class="result-component">
-        <p>result</p>
+        <app-result-component />
       </div>
     </div>
     <!-- Right Column -->
