--- a/frontend/ODIRA/src/app/image-preview/image-preview.css
+++ b/frontend/ODIRA/src/app/image-preview/image-preview.css
@@ -11,3 +11,6 @@
 .heading{
     @apply text-3xl place-self-center;
 }
+.process-img-btn{
+    @apply container place-self-center w-3/4 h-[50px] bg-emerald-300 hover:bg-emerald-500 text-white text-sm font-semibold py-3 rounded-lg shadow-md transition-all duration-200;
+}
