--- a/frontend/ODIRA/src/app/image-preview/image-preview.html
+++ b/frontend/ODIRA/src/app/image-preview/image-preview.html
@@ -4,7 +4,7 @@
     <div class="border-2 border-green-400 grow grid grid-cols-3 mt-4">
       <p>CheckMark</p>
       <div class="container">
-        <button class="process-img-btn">Process Button</button>
+        <button class="process-img-btn" (click)="processImageResults()">Process Button</button>
       </div>
       <p>Image Preview Button</p>
     </div>
