--- a/frontend/ODIRA/src/app/image-preview/image-preview.html
+++ b/frontend/ODIRA/src/app/image-preview/image-preview.html
@@ -1,21 +1,27 @@
 <div class="preview-grid">
   <div class="preview-flex">
     <h1 class="heading">Process Image</h1>
-    <div class="border-2 border-green-400 grow grid grid-cols-3 mt-4">
-      <p>CheckMark</p>
-      <div class="container">
-        <button class="process-img-btn" (click)="processImageResults()">Process Button</button>
+    <div class="grid grid-rows-1 mt-4">
+      <div class="flex items-center justify-between">
+        <div class="w-1/3">
+          <i class="fa-solid fa-check fa-3x text-green-500"></i>
+        </div>
+        <div class="text-center">
+          <button class="process-img-btn" (click)="processImageResults()">
+            Process Button <i class="fa-solid fa-rotate fa-2x"></i>
+          </button>
+        </div>
+        <div class="w-1/3"></div>
       </div>
-      <p>Image Preview Button</p>
     </div>
   </div>
 
   @if(webcamService.previewImage()){
-  <div class="border-4 border-purple-700 h-full">
+  <div class="border-2 border-black h-full">
     <img [src]="webcamService.previewImage()" class="img-size" alt="" />
   </div>
   } @else{
-  <div class="border-4 border-purple-700 h-full">
+  <div class="border-2 border-black h-full">
     <img src="images/camera-off.jpg" class="img-size" alt="" />
   </div>
   }
