--- a/frontend/ODIRA/src/app/odira/odira.css
+++ b/frontend/ODIRA/src/app/odira/odira.css
@@ -4,7 +4,7 @@
     @apply bg-blue-600 mb-4 pb-4 pt-2 max-w-full grid grid-rows-1;
 }
 .odira-content{
-    @apply mx-auto p-4 border-2 border-black grid grid-cols-1 lg:grid-cols-3 lg:grid-rows-6;
+    @apply mx-auto p-4 lg:space-x-4 border-2 border-black grid grid-cols-1 lg:grid-cols-3 lg:grid-rows-6;
 }
 .heading{
     @apply text-4xl rounded-2xl  hover:bg-blue-700 p-4;
@@ -13,19 +13,19 @@
     @apply place-self-center flex flex-row space-x-12;
 }
 .left-column{
-    @apply border-2 border-slate-200 col-span-2 row-span-6;
+    @apply border-2 border-slate-200 col-span-2 row-span-6 space-y-4;
 }
 .right-column{
-    @apply border-2 border-slate-200 col-span-1 row-span-6 grid grid-rows-18;
+    @apply border-2 border-slate-200 col-span-1 row-span-6 grid grid-rows-18 space-y-4;
 }
 .settings-component{
-    @apply border-2 border-blue-400 row-span-6;
+    @apply border-4 border-black row-span-6;
 }
 .upload-image-component{
-    @apply border-2 border-amber-600 row-span-4;
+    @apply border-4 border-black bg-gray-600 row-span-4;
 }
 .image-preview-component{
-    @apply border-2 border-lime-500 row-span-8;
+    @apply border-4 border-black row-span-8;
 }
 .result-component{
     @apply border-2 border-blue-600;
