--- a/frontend/ODIRA/src/app/settings/settings.html
+++ b/frontend/ODIRA/src/app/settings/settings.html
@@ -1,6 +1,12 @@
 <div class="w-full settings-grid settings-border">
-  <div class="grid grid-rows-1 justify-items-center">
-    <h1 class="heading">Settings</h1>
+  <div class="flex items-center justify-between">
+    <div class="w-1/3"></div>
+    <div class="w-1/3 text-center">
+      <h1 class="heading">Settings</h1>
+    </div>
+    <div class="w-1/3 text-right">
+      <i class="fa-solid fa-gear fa-2x"></i>
+    </div>
   </div>
   <div class="settings-container">
     <div class="settings-background space-x-4">
@@ -67,9 +73,9 @@
       </div>
       <div class="list">
         <div
-          class="grid grid-cols-1 justify-items-center border-2 border-amber-50 w-full h-[150px] overflow-y-scroll"
+          class="grid grid-cols-1 justify-items-center bg-gray-600 w-full h-[150px] overflow-y-scroll"
         >
-          <div class="border-2 border-pink-200 w-1/2">
+          <div class="w-1/2">
             <div class="space-x-4">
               <input
                 type="checkbox"
