--- a/frontend/ODIRA/src/app/upload-image/upload-image.css
+++ b/frontend/ODIRA/src/app/upload-image/upload-image.css
@@ -4,10 +4,10 @@
     @apply grid grid-cols-1;
 }
 .upload-border{
-    @apply  border-2 border-amber-500 space-y-4 h-full;
+    @apply  space-y-4 h-full;
 }
 .upload-img-div{
-    @apply border-purple-400 border-2 grid grid-cols-1 justify-items-center gap-4 py-4 px-2
+    @apply  grid grid-cols-1 justify-items-center gap-4 py-4 px-2
 }
 .input-image{
     @apply bg-teal-400 hover:bg-teal-500 rounded-md hover:shadow hover:shadow-teal-200 w-full h-full p-2;
@@ -17,7 +17,7 @@
 
 }
 .logo-space{
-    @apply border-2 border-red-600 space-x-2 p-2 text-slate-100;
+    @apply space-x-2 p-2 text-slate-100;
 }
 .heading{
     @apply text-3xl;
