--- a/frontend/ODIRA/src/app/upload-image/upload-image.html
+++ b/frontend/ODIRA/src/app/upload-image/upload-image.html
@@ -1,8 +1,12 @@
 <div class="upload-grid upload-border">
-  <div class="grid grid-rows-1 place-content-end border-amber-50 border-2">
-    <div class="logo-space">
-      <i class="fa-solid fa-image fa-2x"></i>
-      <i class="fa-solid fa-upload fa-2x"></i>
+  <div class="grid grid-rows-1">
+    <div class="flex items-center justify-between">
+      <div class="w-1/3"></div>
+      <div class="w-1/3"></div>
+      <div class="text-right logo-space">
+        <i class="fa-solid fa-image fa-3x"></i>
+        <i class="fa-solid fa-upload fa-3x"></i>
+      </div>
     </div>
   </div>
   <form [formGroup]="imageData" (ngSubmit)="onFormSubmit()">
