--- a/frontend/ODIRA/src/app/webcam-window/webcam-window.html
+++ b/frontend/ODIRA/src/app/webcam-window/webcam-window.html
@@ -1,18 +1,29 @@
-<div class="w-full border-2 border-pink-400 webcam-grid justify-items-center">
-  <div>
-    <h1 class="heading">Webcam</h1>
+<div class="w-full bg-gray-700 border-2 border-black webcam-grid">
+  <div class="flex items-center justify-between">
+    <div class="w-1/3"></div>
+    <div class="w-1/3 text-center">
+      <h1 class="heading">Webcam</h1>
+    </div>
+    <div class="w-1/3 place-self-end">
+      <i class="fa-solid fa-video fa-4x"></i>
+    </div>
   </div>
-  <div class="mt-2 mb-2">
-    @if(webcamService.showWebcam() == true){
-    <button class="camera-toggle-btn-on-bg" (click)="toggleCamera()">
-      <div class="camera-toggle-btn-on"></div>
-    </button>
-    } @else{
-    <button class="camera-toggle-btn-off-bg" (click)="toggleCamera()">
-      <div class="camera-toggle-btn-off"></div>
-    </button>
-    }
+  <div class="flex items-center justify-between">
+    <div class="w-1/3"></div>
+    <div class="mt-2 mb-2 text-center">
+      @if(webcamService.showWebcam() == true){
+      <button class="camera-toggle-btn-on-bg" (click)="toggleCamera()">
+        <div class="camera-toggle-btn-on"></div>
+      </button>
+      } @else{
+      <button class="camera-toggle-btn-off-bg" (click)="toggleCamera()">
+        <div class="camera-toggle-btn-off"></div>
+      </button>
+      }
+    </div>
+    <div class="w-1/3"></div>
   </div>
+
   @if (webcamService.showWebcam() == true){
   <webcam
     class="webcam-window"
@@ -35,9 +46,13 @@
     <img src="images/camera-off.jpg" class="img-size" />
   </div>
   }
-  <div class="mt-2 mb-2">
-    <button class="capture-btn" (click)="webcamService.triggerSnapShot()">
-      <i class="fa-solid fa-camera fa-3x"></i>
-    </button>
+  <div class="flex items-center justify-between">
+    <div class="w-1/3"></div>
+    <div class="mt-2 mb-2 w-1/3 text-center">
+      <button class="capture-btn" (click)="webcamService.triggerSnapShot()">
+        <i class="fa-solid fa-camera fa-3x"></i>
+      </button>
+    </div>
+    <div class="w-1/3"></div>
   </div>
 </div>
