--- a/frontend/ODIRA/src/app/image-preview/image-preview.html
+++ b/frontend/ODIRA/src/app/image-preview/image-preview.html
@@ -3,9 +3,7 @@
     <h1 class="heading">Process Image</h1>
     <div class="grid grid-rows-1 mt-4">
       <div class="flex items-center justify-between">
-        <div class="w-1/3">
-          <i class="fa-solid fa-check fa-3x text-green-500"></i>
-        </div>
+        <div class="w-1/3"></div>
         <div class="text-center">
           <button class="process-img-btn" (click)="processImageResults()">
             Process Button <i class="fa-solid fa-rotate fa-2x"></i>
