--- a/frontend/ODIRA/src/app/odira/odira.css
+++ b/frontend/ODIRA/src/app/odira/odira.css
@@ -13,7 +13,7 @@
     @apply place-self-center flex flex-row space-x-12;
 }
 .left-column{
-    @apply border-2 border-slate-200 col-span-2 row-span-6 space-y-4;
+    @apply border-2 border-slate-200 col-span-2 row-span-6 space-y-12;
 }
 .right-column{
     @apply border-2 border-slate-200 col-span-1 row-span-6 grid grid-rows-18 space-y-4;
@@ -28,5 +28,6 @@
     @apply border-4 border-black row-span-8;
 }
 .result-component{
-    @apply border-2 border-blue-600;
+    @apply border-4 border-black;
 }
+
