--- a/frontend/ODIRA/src/app/image-preview/image-preview.html
+++ b/frontend/ODIRA/src/app/image-preview/image-preview.html
@@ -5,9 +5,15 @@
       <div class="flex items-center justify-between">
         <div class="w-1/3"></div>
         <div class="text-center">
+          @if(webcamService.previewImage()){
           <button class="process-img-btn" (click)="processImageResults()">
             Process Button <i class="fa-solid fa-rotate fa-2x"></i>
           </button>
+          } @else{
+          <button class="process-img-btn-gray">
+            Process Button <i class="fa-solid fa-rotate fa-2x"></i>
+          </button>
+          }
         </div>
         <div class="w-1/3"></div>
       </div>
