--- a/frontend/ODIRA/src/app/webcam-window/webcam-window.html
+++ b/frontend/ODIRA/src/app/webcam-window/webcam-window.html
@@ -11,6 +11,7 @@
   <div class="flex items-center justify-between">
     <div class="w-1/3"></div>
     <div class="mt-2 mb-2 text-center">
+      <!-- Camera Toggle On/Off button -->
       @if(webcamService.showWebcam() == true){
       <button class="camera-toggle-btn-on-bg" (click)="toggleCamera()">
         <div class="camera-toggle-btn-on"></div>
@@ -49,9 +50,16 @@
   <div class="flex items-center justify-between">
     <div class="w-1/3"></div>
     <div class="mt-2 mb-2 w-1/3 text-center">
+      @if(webcamService.showWebcam() == true){
+
       <button class="capture-btn" (click)="webcamService.triggerSnapShot()">
         <i class="fa-solid fa-camera fa-3x"></i>
       </button>
+      } @else{
+      <button class="capture-btn-gray">
+        <i class="fa-solid fa-camera fa-3x"></i>
+      </button>
+      }
     </div>
     <div class="w-1/3"></div>
   </div>
