Add About Page and Final Styling

--- a/frontend/ODIRA/src/app/app.html
+++ b/frontend/ODIRA/src/app/app.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="odira-container">
-      <app-odira />
+      <router-outlet />
     </div>
   </body>
 </html>
