--- a/frontend/ODIRA/src/app/odira/odira.html
+++ b/frontend/ODIRA/src/app/odira/odira.html
@@ -2,8 +2,8 @@
   <!-- Main menu -->
   <div class="nav-menu">
     <div class="heading-items">
-      <h1 class="heading">ODIRA</h1>
-      <h1 class="heading">ABOUT</h1>
+      <a [routerLink]="['/']"><h1 class="heading">ODIRA</h1></a>
+      <a [routerLink]="['/about']"><h1 class="heading">ABOUT</h1></a>
     </div>
   </div>
 
