--- a/frontend/ODIRA/src/app/result-component/result-component.html
+++ b/frontend/ODIRA/src/app/result-component/result-component.html
@@ -52,7 +52,9 @@
       <li>
         Select the appropriate category/categories that the object(s) in the image belong to.
         <ul class="flex flex-col items-center">
-          <li class="underline">List of items in each category</li>
+          <li class="underline hover-link">
+            <a [routerLink]="['/about']">List of items in each category</a>
+          </li>
         </ul>
       </li>
       <li>Make sure the object(s) are visible in the image.</li>
