--- a/frontend/ODIRA/src/app/settings/settings.html
+++ b/frontend/ODIRA/src/app/settings/settings.html
@@ -11,7 +11,7 @@
   <div class="settings-container">
     <div class="settings-background space-x-4">
       <!-- Object Detection Threshold -->
-      <p>Object Detection Threshold</p>
+      <p>Object Threshold (Confidence)</p>
       <div>
         <input
           type="range"
@@ -40,7 +40,7 @@
         </div>
       </div>
       <!-- NMS Threshold -->
-      <p>NMS Threshold</p>
+      <p>NMS Threshold (Overlap Objects)</p>
       <div>
         <input
           type="range"
